# expert-agent-builder

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
entries/2026/03/03/: expert-agent-builder.md
expert_build/: __init__.py  chunk_docs.py  chunk_pdf.py  cli.py  coverage.py  exam.py  exam_matrix.py  fetch.py  index_sources.py  init_cmd.py  llm.py  pipeline.py  prompts.py  propose.py  summarize.py
expert_build/data/: CLAUDE.md.template  SKILL.md
tests/: test_chunk_docs.py  test_cli.py  test_coverage.py  test_exam.py  test_exam_matrix.py  test_index_sources.py  test_llm.py  test_pipeline.py  test_propose.py  test_summarize.py
