[project]
name = "expert-agent-builder"
version = "0.1.0"
description = "Build expert agents from documented domains"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = ["httpx>=0.27", "beautifulsoup4>=4.12"]

[project.optional-dependencies]
embeddings = ["fastembed>=0.7.4", "numpy"]

[project.scripts]
expert-build = "expert_build.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["expert_build"]
