[project]
name = "expert-agent-builder"
version = "0.2.0"
description = "Build expert agents from documented domains"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = ["httpx>=0.27", "beautifulsoup4>=4.12", "ftl-reasons", "pypdf>=4.0"]

[project.optional-dependencies]
embeddings = ["fastembed>=0.7.4", "numpy"]

[project.scripts]
expert-build = "expert_build.cli:main"

[tool.uv.sources]
ftl-reasons = { path = "../ftl-reasons", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["expert_build"]
